# killercoda-cli

./: .coveragerc  .editorconfig  .gitignore  .mutmut-config.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE.txt  README.md  SECURITY.md  TESTING_IMPROVEMENTS.md  dagger.json  pyproject.toml
.github/workflows/: build_reusable.yml  ci.yml
dagger/: pyproject.toml
dagger/src/main/: __init__.py
killercoda_cli/: __about__.py  __init__.py  assets.py  cli.py  file_operations.py  scenario_init.py  step_management.py  validation.py
tests/: __init__.py  test_assets.py  test_cli.py  test_file_operations.py  test_file_operations_security.py  test_integration_cli.py  test_scenario_init.py  test_step_management.py  test_step_management_properties.py  test_validation.py
