[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "killercoda-cli"
dynamic = ["version"]
description = 'A CLI helper for writing killercoda scenarios and managing steps'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "inquirer",
    "cookiecutter",
]
keywords = []
authors = [
  { name = "Piotr Zaniewski", email = "piotrzan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/unknown/killercoda-cli#readme"
Issues = "https://github.com/unknown/killercoda-cli/issues"
Source = "https://github.com/unknown/killercoda-cli"

[project.scripts]
killercoda-cli = "killercoda_cli.cli:main"

[tool.hatch.version]
path = "killercoda_cli/__about__.py"
validate-bump = false 

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.test]
type = "virtual"
path = ".venv-test"
dependencies = ["coverage"]

[tool.hatch.envs.test.scripts]
unit = "coverage run --source=killercoda_cli -m unittest discover -v tests"
coverage-report = "coverage xml"

[tool.hatch.envs.docs]
type = "virtual"
path = ".venv-docs"
dependencies = ["pdoc"]  

[tool.hatch.envs.docs.scripts]
generate = "pdoc -m google killercoda_cli -o docs"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:killercoda_cli tests}"

[tool.coverage.run]
source_pkgs = ["killercoda_cli", "tests"]
branch = true
parallel = true
omit = [
  "killercoda_cli/__about__.py",
]

[tool.coverage.paths]
killercoda_cli = ["killercoda_cli", "*/killercoda-cli/killercoda_cli"]
tests = ["tests", "*/killercoda-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
