[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "killercoda-cli"
dynamic = ["version"]
description = 'A CLI helper for writing killercoda scenarios and managing steps'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "inquirer>=3.1.0",
    "cookiecutter>=2.6.0",
]
keywords = ["killercoda", "cli", "scenarios", "interactive-tutorials", "education"]
authors = [
  { name = "Piotr Zaniewski", email = "piotrzan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Education",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/Piotr1215/killercoda-cli#readme"
Issues = "https://github.com/Piotr1215/killercoda-cli/issues"
Source = "https://github.com/Piotr1215/killercoda-cli"
Changelog = "https://github.com/Piotr1215/killercoda-cli/releases"

[project.scripts]
killercoda-cli = "killercoda_cli.cli:main"

[tool.hatch.version]
path = "killercoda_cli/__about__.py"
validate-bump = false 

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=7.6.0",
  "pytest>=8.3.0",
]

[tool.hatch.envs.test]
type = "virtual"
path = ".venv-test"
dependencies = [
  "coverage[toml]>=7.6.0",
  "pytest>=8.3.0",
  "mutmut>=2.4.0",
  "hypothesis>=6.0.0",
]

[tool.hatch.envs.test.scripts]
unit = "coverage run --source=killercoda_cli -m unittest discover -v tests"
coverage-report = "coverage xml"
mutate = "mutmut run --paths-to-mutate=killercoda_cli/"
mutate-results = "mutmut results"
mutate-show = "mutmut show"
mutate-html = "mutmut html"

[tool.hatch.envs.docs]
type = "virtual"
path = ".venv-docs"
dependencies = ["pdoc>=14.7.0"]  

[tool.hatch.envs.docs.scripts]
generate = "pdoc -m google killercoda_cli -o docs"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "ruff>=0.8.0",
]
[tool.hatch.envs.lint.scripts]
check = "ruff check {args:killercoda_cli tests}"
format = "ruff format {args:killercoda_cli tests}"
format-check = "ruff format --check {args:killercoda_cli tests}"
all = [
  "format",
  "check",
]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.13.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:killercoda_cli tests}"

[tool.coverage.run]
source_pkgs = ["killercoda_cli", "tests"]
branch = true
parallel = true
omit = [
  "killercoda_cli/__about__.py",
]

[tool.coverage.paths]
killercoda_cli = ["killercoda_cli", "*/killercoda-cli/killercoda_cli"]
tests = ["tests", "*/killercoda-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line too long, handled by formatter
  "B008",  # do not perform function calls in argument defaults
  "B904",  # raise from
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["ARG"]  # unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
